# AriesFFmpeg

./: README.md  build.sh
app/: build.gradle
app/src/androidTest/java/com/aries/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VideoPlayer.cpp  VideoPlayer.h  native-lib.cpp
app/src/main/cpp/core/: jni_helper.cpp  jni_helper.hpp
app/src/main/cpp/ffmpeg/: com_aries_ffmpeg_ffmpeg_FFmpeg.c  com_aries_ffmpeg_ffmpeg_FFmpeg.h
app/src/main/java/com/aries/ffmpeg/: ClipActivity.java  FFmpegApplication.java  MainActivity.java  PlayActivity.java  VideoClip.java  VideoPlayer.java
app/src/main/java/com/aries/ffmpeg/codec/: ClipActivity.java  VideoClip.java
app/src/main/java/com/aries/ffmpeg/ffmpeg/: ConfigureActivity.java  FFmpeg.java
app/src/main/java/com/aries/ffmpeg/frame/: FrameActivity.java  UriUtils.java  VideoFrameCounter.java
app/src/main/java/com/aries/ffmpeg/play/: VideoPlayer.java
app/src/main/res/layout/: activity_clip.xml  activity_configure.xml  activity_frame.xml  activity_main.xml  activity_play.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/aries/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
